# upprpo_lab1

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: BitArray.h
src/: BitArray.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
